fix: no wrap words in table-departures

--- a/src/app/shared/components/table-departures/table-departures.component.scss
+++ b/src/app/shared/components/table-departures/table-departures.component.scss
@@ -30,3 +30,8 @@
     }
   }
 }
+
+table {
+  table-layout: auto !important;
+  white-space: nowrap;
+}
